test/test_11710503_7.out
Error type 8 at Line 2: incompatiable return type
Error type 6 at Line 9: left side in assignment is rvalue
