test/test_11710503_7.spl
float foo(){
    return 1;
}

int main(){
    int a,b;
    a = 0;
    b = 0;
    1 = a + b;
}